# load-balancer

./: docker-compose.override.yml  docker-compose.yml  run_dashboard.bat  run_dashboard.sh  run_dashboard_compose.bat  run_dashboard_compose.sh  run_dashboard_local.bat  run_dashboard_local.sh
client/: Cargo.toml
client/src/: main.rs  requests.rs  tui_utils.rs
dashboard/: Cargo.toml
dashboard/src/: main.rs
load-balancer/: Cargo.toml  Dockerfile
load-balancer/src/: balancing_algorithm.rs  load_balancer.rs  main.rs  server.rs
tui_utils/: Cargo.toml
tui_utils/src/: lib.rs
worker-server/: Cargo.toml  Dockerfile
worker-server/src/: environment.rs  main.rs
