[package]
name = "load-balancer"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.8.0"
chrono = "0.4.38"
environment = { path = "../environment" }
http-body-util = "0.1"
hyper = { version = "1.5.1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
serde = { version = "1.0.215" }
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
