[package]
name = "worker-server"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.9.0"
http-body-util = "0.1"
hyper = { version = "1.5.1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
once_cell = "1.20.2"
rand = "0.8.5"
serde = { version = "1.0.215" }
serde_json = "1.0.133"
tokio = { version = "1.41.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.19"
